[package]
name = "dependency-curator"
version = "0.1.0"
authors = ["Kate Vandermolen <vandek5@rpi.edu>"]
edition = "2018"

# Exact version numbers to document which are available
[dependencies]
serde_json = "1.0.57" # (De)serializing JSON from/into structs
json = "0.12.4" # Simple JSON parser without serialization
byteorder = "1.3.4" # Converts byte slices into integers with endianness
num_cpus = "1.13.0" # Gets the number of CPUs on the system - good for parallel
walkdir = "2.3.1" # Recursively iterates/walks a directory tree
url = "2.1.1" # Parses URLs
either = "1.6.0" # Provides a Left/Right type
itertools = "0.9.0" # Provides extensions to stdlib's iterators
backtrace = "0.3.50" # Allows generating backtraces
rand = "0.7.3" # Random number generator
lazy_static = "1.4.0" # Allows initializing static variables with complex types
log = "0.4.11" # Logging facade - needs a logger
simple_logger = "1.9.0" # Logger for the log facade
structopt = "0.3.17" # Parses arguments into a struct
clap = "2.33.3" # Verbose and explicit argument parser for when structopt fails
bitflags = "1.2.1" # Allows creating bitflag types
regex = "1.3.9" # Regular expression implementation
